fixed footer being covered by above content

--- a/level-1/step-1/step-1.css
+++ b/level-1/step-1/step-1.css
@@ -36,6 +36,7 @@
 /* Step-1.4 your going to want to add a positioning property to get this container to the bottom of the screen  */
 
 .footer {
+    float: left;
     width: 100%;
     height: 100px;
     background: #3A3A3A;
